# traccia

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  REFERENCES.md  SECURITY.md  SPEC.md  SUPPORT.md  decisions.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: architecture-notes.md  architecture.md  cli-reference.md  codebase-map.md  configuration.md  decisions.md  development.md  exports.md  finished-run-viewer-decisions.md  index.md  ingest-architecture.md  ingestion.md  plan.md  project-layout.md  quickstart.md  references.md  repository-inventory.md  spec.md
scripts/: check-viewer-performance.mjs
src/traccia/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  curation.py  document_normalizer.py  extraction.py  family_normalizer.py  fixtures.py  google_takeout.py  llm.py  models.py  parsers.py  pipeline.py  pipeline_support.py  rendering.py  source_detection.py  storage.py  taxonomy.py  utils.py  viewer.py  viewer_assets.py
src/traccia/assets/fonts/: README.md
tests/: test_config.py  test_error_messages.py  test_extraction.py  test_fixtures.py  test_init.py  test_llm.py  test_models.py  test_npm_wrapper.py  test_parsers.py  test_pipeline.py  test_signal_handling.py  test_source_detection.py  test_storage.py  test_utils.py  test_viewer.py
tests/fixtures/corpus/: app.py  notes.md  project-readme.md  tasks.csv
tests/fixtures/golden/: evidence-item.json  manifest.json  person-skill-state.json  sample-source.md  skill-node.json  source-document.json
tests/fixtures/golden/project/: config.yaml
