[build-system]
requires = ["hatchling>=1.29.0,<2"]
build-backend = "hatchling.build"

[project]
name = "traccia"
version = "0.1.0"
description = "Local-first reflective skill graph compiler."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "pydantic>=2.11,<3",
  "pypdf>=6.10.2,<7",
  "pyyaml>=6.0.3,<7",
  "typer>=0.21.2,<0.22",
  "python-docx>=1.2.0,<2",
  "openpyxl>=3.1,<4",
  "lxml>=6.1.0,<7",
]

[project.optional-dependencies]
docling = [
  "docling>=2.90,<3",
]
marker = [
  "marker-pdf",
]
markitdown = [
  "markitdown",
]
document-markdown = [
  "docling>=2.90,<3",
  "marker-pdf",
  "markitdown",
]

[project.scripts]
traccia = "traccia.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.15.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/traccia"]

[tool.hatch.build.targets.sdist]
only-include = [
  ".github/assets",
  "CODEOWNERS",
  "CONTRIBUTING.md",
  "LICENSE",
  "README.md",
  "docs",
  "npm",
  "package.json",
  "pyproject.toml",
  "src",
  "tests",
]

[tool.hatch.build]
exclude = [
  "/.dora",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/dist",
  "/scripts",
  "/tmp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["C4", "F", "I", "SIM", "UP"]
